--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,3 @@
-#open by limy property editor
-com.example.service.UniqueEmail.message=\u3059\u3067\u306b\u767b\u9332\u3055\u308c\u3066\u3044\u307e\u3059
-com.example.service.ByteLength.message={min} \u304b\u3089 {max} \u306e\u9593\u306e\u30d0\u30a4\u30c8\u6570\u306b\u3057\u3066\u304f\u3060\u3055\u3044
+# open by limy property editor
+com.example.validation.UniqueEmail.message=\u3059\u3067\u306b\u767b\u9332\u3055\u308c\u3066\u3044\u307e\u3059
+com.example.validation.ByteLength.message={min} \u304b\u3089 {max} \u306e\u9593\u306e\u30d0\u30a4\u30c8\u6570\u306b\u3057\u3066\u304f\u3060\u3055\u3044
